# MinMaxC-IGplus

./: CMakeLists.txt  README.md
run/: para.cpp  runIG.cpp  runIGHeap.cpp  runIGLPlus.cpp  runIGLPlus_insert.cpp  runIGLPlus_remove.cpp  runIGLPlus_withTree.cpp  runIGL_PRPlus.cpp  runMaxD.cpp
src/: binheap.h  dsu.h  graph.h  gsum.cpp  gsum.h
